--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "antd": "^5.25.3",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "react-responsive-carousel": "^3.2.23",
     "react-router-dom": "^7.6.1",
     "styled-components": "^6.1.18"
   },
