--- a/package.json
+++ b/package.json
@@ -11,9 +11,12 @@
   },
   "dependencies": {
     "@ant-design/icons": "^5.6.1",
+    "@tanstack/react-query": "^5.80.6",
     "antd": "^5.25.3",
+    "axios": "^1.9.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "react-hook-form": "^7.57.0",
     "react-responsive-carousel": "^3.2.23",
     "react-router-dom": "^7.6.1",
     "styled-components": "^6.1.18"
